[package]
name = "supertonic-tap"
version = "0.1.0"
edition = "2024"

[features]
default = []
webgpu = [ "ort/webgpu" ]
cuda = [ "ort/cuda" ]

[dependencies]
anyhow = "1.0.102"
async-trait = { workspace = true }
crossbeam-channel = "0.5.15"
dotenvy = { workspace = true }
hound = "3.5.1"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "tracing", "api-24"] }
rand = "0.10.1"
rand_distr = "0.6.0"
regex = "1.12.3"
rustls = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = "0.1.25"
zako3-tap-sdk = { workspace = true }
